--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=236670
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+minio.url=http://localhost:9000
+minio.access.name=admin
+minio.access.secret=12345678
+minio.bucket.name=mybucket
+minio.secure=false
+
