--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ minio.access.name=admin
 minio.access.secret=12345678
 minio.bucket.name=mybucket
 minio.secure=false
+spring.jpa.properties.hibernate.format_sql=true
+
 
