orders and products jpa integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
-spring.datasource.username=postgres
-spring.datasource.password=236670
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 minio.url=http://localhost:9000
 minio.access.name=admin
 minio.access.secret=12345678
 minio.bucket.name=mybucket
 minio.secure=false
-spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.username=postgres
+spring.datasource.password=236670
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 
 
