--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,7 @@ minio.access.name=admin
 minio.access.secret=12345678
 minio.bucket.name=mybucket
 minio.secure=false
-
-
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=postgres
 spring.datasource.password=236670
